--- a/index.html
+++ b/index.html
@@ -5,11 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="dist/app.js" defer></script>
+    <script src="./src/app.js" defer></script>
 </head>
 <body>
-    <input id="input1">
-    <input id="input2">
-    <button id="button">Clique aqui</button>
+    <div style="display: flex;">
+        <div style="display: flex; width: 300px; height: 100px; justify-content: space-between; flex-direction: column;">
+            <input id="login-input" placeholder="Login" onchange="preencherLogin(event)">
+            <input id="password-input" placeholder="Senha" type="password" onchange="preencherSenha(event)">
+            <input id="apikey-input" placeholder="Api Key" onchange="preencherApi(event)">
+            <button id="login-button" disabled>Login</button>
+        </div>
+        <div id="search" style="margin-left: 20px">
+            <input id="search-input" placeholder="Escreva...">
+            <button id="search-button">Pesquisar Filme</button>
+        </div>
+    </div>
 </body>
 </html>
